--- a/CheckYourEligibility-Admin/Views/Check/Check_Answers.cshtml
+++ b/CheckYourEligibility-Admin/Views/Check/Check_Answers.cshtml
@@ -1,4 +1,5 @@
-﻿@model CheckYourEligibility_FrontEnd.Models.FsmApplication;
+﻿@using System.Globalization
+@model CheckYourEligibility_FrontEnd.Models.FsmApplication;
 
 @{
     ViewData["Title"] = "Check Answers";
@@ -93,7 +94,7 @@
                     </h2>
                     <ul class="govuk-summary-card__actions">
                         <li class="govuk-summary-card__action">
-                            @Html.ActionLink("Change", "ChangeChildDetails")
+                            @Html.ActionLink("Change", "ChangeChildDetails", new { child=i })
                         </li>
                     </ul>
                 </div>
