--- a/CheckYourEligibility-Admin/wwwroot/css/site.css
+++ b/CheckYourEligibility-Admin/wwwroot/css/site.css
@@ -70,6 +70,8 @@
 /*END - back button overrides */
 
 
+/*BEGIN - Sign out link syling */
+
 a.signOut:link, a.signOut:visited, a.signOut:hover, a.signOut:active {
     color: white;
     text-decoration: none;
@@ -82,3 +84,21 @@ a.signOut:hover {
 .govuk-pagination {
     justify-content: center;
 }
+
+/*END - Sign out link syling */
+
+
+/*BEGIN - Accessible dashboard card links */
+
+.sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    border: 0;
+}
+
+/*END - Accessible dashboard card links */
