--- a/CheckYourEligibility-Admin/Views/Application/ApplicationDetail.cshtml
+++ b/CheckYourEligibility-Admin/Views/Application/ApplicationDetail.cshtml
@@ -1,7 +1,7 @@
 ﻿@using CheckYourEligibility_FrontEnd.ViewModels
 @model ApplicationDetailViewModel
 
-<a class="govuk-back-link" href="/Back" onclick="history.back(); return false;">Back</a>
+<a class="govuk-back-link" href="@Url.Action("SearchResults", "Application")" onclick="history.back(); return false;">Back</a>
 @* <a class="govuk-back-link-nolink"></a> *@
 
 <main class="govuk-main-wrapper" id="main-content">
