--- a/CheckYourEligibility-Admin/Views/Application/ApplicationFinaliseConfirmation.cshtml
+++ b/CheckYourEligibility-Admin/Views/Application/ApplicationFinaliseConfirmation.cshtml
@@ -1,4 +1,4 @@
-﻿@* <a class="govuk-back-link" href="/Back" onclick="history.back(); return false;">Back</a> *@
+﻿@* <a class="govuk-back-link" href="#" onclick="history.back(); return false;">Back</a> *@
 <a class="govuk-back-link-nolink"></a>
 
 <div class="govuk-!-padding-bottom-3"></div>
