--- a/CheckYourEligibility-Admin/Views/Application/EvidenceGuidance.cshtml
+++ b/CheckYourEligibility-Admin/Views/Application/EvidenceGuidance.cshtml
@@ -1,4 +1,4 @@
-﻿<a class="govuk-back-link" href="/Back" onclick="history.back(); return false;">Back</a>
+﻿<a class="govuk-back-link" href="@Url.Action("Application", "AppealsApplications")" onclick="history.back(); return false;">Back</a>
 @* <a class="govuk-back-link-nolink"></a> *@
 
 <main class="govuk-main-wrapper" id="main-content">
