--- a/CheckYourEligibility-Admin/Views/Application/Search.cshtml
+++ b/CheckYourEligibility-Admin/Views/Application/Search.cshtml
@@ -5,17 +5,16 @@
     ViewData["ServiceName"] = "Search for an existing application";
 }
 
-@if (!ViewData.ModelState.IsValid)
-{
-    ViewData["Title"] = "Error: Check Details";
-    <partial name="_ValidationSummary" model="ViewData.ModelState" />
-}
-
-
-<a class="govuk-back-link" href="/Back" onclick="history.back(); return false;">Back</a>
+<a class="govuk-back-link" href="@Url.Action("Index", "Home")" onclick="history.back(); return false;">Back</a>
 @* <a class="govuk-back-link-nolink"></a> *@
 
 <div class="govuk-grid-row">
+
+    @if (!ViewData.ModelState.IsValid)
+    {
+        ViewData["Title"] = "Error: Check Details";
+        <partial name="_ValidationSummary" model="ViewData.ModelState" />
+    }
 
     <div class="govuk-grid-column-full">
         <h1 class="govuk-heading-l">
