--- a/CheckYourEligibility-Admin/Views/BulkUpload/BatchOutcome/Error_Not_Accepted.cshtml
+++ b/CheckYourEligibility-Admin/Views/BulkUpload/BatchOutcome/Error_Not_Accepted.cshtml
@@ -3,7 +3,7 @@
     ViewData["ServiceName"] = "Check a family's eligibility";
 }
 
-@* <a class="govuk-back-link" href="/Back" onclick="history.back(); return false;">Back</a> *@
+@* <a class="govuk-back-link" href="#" onclick="history.back(); return false;">Back</a> *@
 <a class="govuk-back-link-nolink"></a>
 
 <div class="govuk-error-summary" data-module="govuk-error-summary">
