--- a/CheckYourEligibility-Admin/Views/Check/Check_Answers.cshtml
+++ b/CheckYourEligibility-Admin/Views/Check/Check_Answers.cshtml
@@ -12,7 +12,7 @@
     <partial name="_ValidationSummary" model="ViewData.ModelState" />
 }
 
-@* <a class="govuk-back-link" href="/Back" onclick="history.back(); return false;">Back</a>*@
+@* <a class="govuk-back-link" href="#" onclick="history.back(); return false;">Back</a>*@
 <a class="govuk-back-link-nolink"></a>
 
 <div class="govuk-grid-row">
