--- a/CheckYourEligibility-Admin/Views/Check/Enter_Child_Details.cshtml
+++ b/CheckYourEligibility-Admin/Views/Check/Enter_Child_Details.cshtml
@@ -12,7 +12,7 @@
     <partial name="_ValidationSummary" model="ViewData.ModelState" />
 }
 
-@* <a class="govuk-back-link" href="/Back" onclick="history.back(); return false;">Back</a>*@
+@* <a class="govuk-back-link" href="#" onclick="history.back(); return false;">Back</a>*@
 <a class="govuk-back-link-nolink"></a>
 
 <h1 class="govuk-heading-l" tabindex="-1">
