--- a/CheckYourEligibility-Admin/Views/Check/Process_Appeals.cshtml
+++ b/CheckYourEligibility-Admin/Views/Check/Process_Appeals.cshtml
@@ -5,7 +5,7 @@
     ViewData["ServiceName"] = "Check a family's eligibility";
 }
 
-<a class="govuk-back-link" href="/Back" onclick="history.back(); return false;">Back</a>
+<a class="govuk-back-link" href="@Url.Action("Index", "Home")" onclick="history.back(); return false;">Back</a>
 @* <a class="govuk-back-link-nolink"></a> *@
 
 <div class="govuk-grid-row">
