--- a/CheckYourEligibility-Admin/Views/Home/Cookies.cshtml
+++ b/CheckYourEligibility-Admin/Views/Home/Cookies.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Cookies";
 }
 
-<a class="govuk-back-link" href="/Back" onclick="history.back(); return false;">Back</a>
+<a class="govuk-back-link" href="@Url.Action("Index", "Home")" onclick="history.back(); return false;">Back</a>
 @* <a class="govuk-back-link-nolink"></a> *@
 
 <h1 class="govuk-heading-l govuk-!-margin-bottom-4">Cookies</h1>
