--- a/CheckYourEligibility-Admin/Views/LocalAuthority/Check/Application_Sent.cshtml
+++ b/CheckYourEligibility-Admin/Views/LocalAuthority/Check/Application_Sent.cshtml
@@ -11,7 +11,7 @@
     <partial name="_ValidationSummary" model="ViewData.ModelState" />
 }
 
-@* <a class="govuk-back-link" href="/Back" onclick="history.back(); return false;">Back</a> *@
+@* <a class="govuk-back-link" href="#" onclick="history.back(); return false;">Back</a> *@
 <a class="govuk-back-link-nolink"></a>
 
 <div class="moj-banner moj-banner--success" role="region" aria-label="Success">
