--- a/CheckYourEligibility-Parent/Views/Check/Check_Answers.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Check_Answers.cshtml
@@ -9,7 +9,7 @@
     string formattedParentDOB = parentDOB.ToString("dd/MM/yyyy");
 }
 
-@* <a class="govuk-back-link" href="/Back" onclick="history.back(); return false;">Back</a> *@
+@* <a class="govuk-back-link" href="#" onclick="history.back(); return false;">Back</a> *@
 <a class="govuk-back-link-nolink"></a>
 
 @if (!ViewData.ModelState.IsValid)
