--- a/CheckYourEligibility-Parent/Views/Check/Nass.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Nass.cshtml
@@ -10,7 +10,7 @@
     var parent = JsonConvert.DeserializeObject<Parent>(request);
 }
 
-<a class="govuk-back-link" href="/Back" onclick="history.back(); return false;">Back</a>
+<a class="govuk-back-link" href="@Url.Action("EnterDetails", "Check")" onclick="history.back(); return false;">Back</a>
 @* <a class="govuk-back-link-nolink"></a> *@
 
 @if (!ViewData.ModelState.IsValid)
