--- a/CheckYourEligibility-Parent/Views/Home/Privacy.cshtml
+++ b/CheckYourEligibility-Parent/Views/Home/Privacy.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Privacy policy";
 }
 
-<a class="govuk-back-link" href="/Back" onclick="history.back(); return false;">Back</a>
+<a class="govuk-back-link" href="@Url.Action("Index", "Home")" onclick="history.back(); return false;">Back</a>
 @* <a class="govuk-back-link-nolink"></a> *@
 
 <h1 class="govuk-heading-l">Privacy Notice</h1>
