Amend date input fields to read labels correctly for screenreaders

--- a/CheckYourEligibility-Admin/Views/Check/Enter_Details.cshtml
+++ b/CheckYourEligibility-Admin/Views/Check/Enter_Details.cshtml
@@ -132,7 +132,7 @@
                             <p class="govuk-error-message">
                                 <span asp-validation-for="Year"></span>
                             </p>
-                            <input class="govuk-input govuk-date-input__input govuk-input--width-4" asp-for="Year" inputmode="numeric" maxlength="4" data-type="dob" aria-label="Year" />
+                            <input class="govuk-input govuk-date-input__input govuk-input--width-4" asp-for="Year" type="text" inputmode="numeric" maxlength="4" data-type="dob" aria-label="Year" />
                         </div>
                     </div>
                 </div>
