--- a/CheckYourEligibility-Admin/Views/LocalAuthority/Check/Enter_Child_Details.cshtml
+++ b/CheckYourEligibility-Admin/Views/LocalAuthority/Check/Enter_Child_Details.cshtml
@@ -95,7 +95,7 @@
                                 <p class="govuk-error-message">
                                     <span asp-validation-for="ChildList[i].Day"></span>
                                 </p>
-                                <input asp-for="ChildList[i].Day" id="ChildList[@i].Day" data-type="dob" class="govuk-input govuk-date-input__input govuk-input--width-2" inputmode="numeric">
+                                <input asp-for="ChildList[i].Day" id="ChildList[@i].Day" data-type="dob" class="govuk-input govuk-date-input__input govuk-input--width-2" type="text" inputmode="numeric">
                             </div>
                         </div>
 
@@ -107,7 +107,7 @@
                                 <p class="govuk-error-message">
                                     <span asp-validation-for="ChildList[i].Month"></span>
                                 </p>
-                                <input asp-for="ChildList[i].Month" id="ChildList[@i].Month" data-type="dob" class="govuk-input govuk-date-input__input govuk-input--width-2" inputmode="numeric">
+                                <input asp-for="ChildList[i].Month" id="ChildList[@i].Month" data-type="dob" class="govuk-input govuk-date-input__input govuk-input--width-2" type="text" inputmode="numeric">
                             </div>
                         </div>
 
@@ -119,7 +119,7 @@
                                 <p class="govuk-error-message">
                                     <span asp-validation-for="ChildList[i].Year"></span>
                                 </p>
-                                <input asp-for="ChildList[i].Year" id="ChildList[@i].Year" data-type="dob" class="govuk-input govuk-date-input__input govuk-input--width-4" inputmode="numeric">
+                                <input asp-for="ChildList[i].Year" id="ChildList[@i].Year" data-type="dob" class="govuk-input govuk-date-input__input govuk-input--width-4" type="text" inputmode="numeric">
                             </div>
                         </div>
                     </div>
