--- a/CheckYourEligibility-Parent/Views/Check/Enter_Details.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Enter_Details.cshtml
@@ -66,7 +66,7 @@
                         <p class="govuk-error-message">
                             <span asp-validation-for="Day"></span>
                         </p>
-                        <input class="govuk-input govuk-date-input__input govuk-input--width-2" asp-for="Day" inputmode="numeric" maxlength="2" data-type="dob" aria-label="Day" />
+                        <input class="govuk-input govuk-date-input__input govuk-input--width-2" asp-for="Day" type="text" inputmode="numeric" maxlength="2" data-type="dob" aria-label="Day" />
                     </div>
                 </div>
 
@@ -78,7 +78,7 @@
                         <p class="govuk-error-message">
                             <span asp-validation-for="Month"></span>
                         </p>
-                        <input class="govuk-input govuk-date-input__input govuk-input--width-2" asp-for="Month" inputmode="numeric" maxlength="2" data-type="dob" aria-label="Month" />
+                        <input class="govuk-input govuk-date-input__input govuk-input--width-2" asp-for="Month" type="text" inputmode="numeric" maxlength="2" data-type="dob" aria-label="Month" />
                     </div>
                 </div>
 
@@ -90,7 +90,7 @@
                         <p class="govuk-error-message">
                             <span asp-validation-for="Year"></span>
                         </p>
-                        <input class="govuk-input govuk-date-input__input govuk-input--width-4" asp-for="Year" inputmode="numeric" maxlength="4" data-type="dob" aria-label="Year" />
+                        <input class="govuk-input govuk-date-input__input govuk-input--width-4" asp-for="Year" type="text" inputmode="numeric" maxlength="4" data-type="dob" aria-label="Year" />
                     </div>
                 </div>
             </div>
