--- a/CheckYourEligibility-Parent/Views/Check/Enter_Details.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Enter_Details.cshtml
@@ -108,6 +108,9 @@
             </div>
 
             <div class="govuk-radios" data-module="govuk-radios">
+                <p class="govuk-error-message">
+                    <span asp-validation-for="IsNinoSelected"></span>
+                </p>
                 <div class="govuk-radios__item">
                     <input class="govuk-radios__input" asp-for="IsNinoSelected" type="radio" value="true" aria-controls="conditional-ni-number" aria-expanded="false" aria-label="Yes">
                     <label class="govuk-label govuk-radios__label" for="ni-number">
