--- a/CheckYourEligibility-Parent/Views/Check/Enter_Child_Details.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Enter_Child_Details.cshtml
@@ -74,6 +74,11 @@
                 <div id="school-picker-hint" class="govuk-hint">
                     Type to search
                 </div>
+
+                 <noscript>
+                     Your browser does not support JavaScript! please enter the URN in place of the school name.
+                 </noscript>
+
                 <p class="govuk-error-message">
                     <span asp-validation-for="ChildList[i].School.Name"></span>
                 </p>
