--- a/CheckYourEligibility-Parent/Views/Home/Index.cshtml
+++ b/CheckYourEligibility-Parent/Views/Home/Index.cshtml
@@ -1,6 +1,11 @@
-﻿@{
+﻿@using Azure.Core
+@inject Microsoft.AspNetCore.Http.IHttpContextAccessor HttpContextAccessor
+@using Microsoft.AspNetCore.Http.Extensions
+@{
     Layout = "~/Views/Shared/_Layout_StartNow.cshtml";
     ViewData["Title"] = "Home Page";
+    var url = UriHelper.GetDisplayUrl(HttpContextAccessor.HttpContext.Request);
+    url = url.Replace("as", "as-admin");
 }
 
 <div class="govuk-width-container ">
@@ -10,6 +15,10 @@
                 <h1 class="govuk-heading-xl">
                     Check if your children can get free school meals
                 </h1>
+            </div>
+        </div>
+        <div class="govuk-grid-row">
+            <div class="govuk-grid-column-two-thirds">
                 <p>Here you can:</p>
 
                 <ul class="govuk-list--bullet">
@@ -64,6 +73,13 @@
                 <p>If you need further support, <a href="../Home/Parental_Guidance">check the more detailed guidance</a>  for parents and guardians.</p>
                 <p>If you cannot apply online, you can fill in <a href="@Url.Action("fsm_print_version", "Home")">the 'Free school meals entitlement checker' form</a> and give it to your children's school. </p>
 
+            </div>
+            <div class="govuk-grid-column-one-quarter">
+                <div>
+                    <div class="blue-line"></div>
+                    <h3 class="govuk-heading-s">Related Content</h3>
+                    <a href="@url">If you are a School or Local Authority, you can log in to the service here </a>
+                </div>
             </div>
         </div>
     </main>
