--- a/CheckYourEligibility-Admin/Views/Shared/Loader.cshtml
+++ b/CheckYourEligibility-Admin/Views/Shared/Loader.cshtml
@@ -6,7 +6,7 @@
 @* <a class="govuk-back-link" href="#" onclick="history.back(); return false;">Back</a>*@
 <a class="govuk-back-link-nolink"></a>
 
-<div class="govuk-grid-row">
+<div class="govuk-grid-row" id="content"> 
     <div class="govuk-grid-column-full">
         <div class="flex-container">
             <div class="container">
