Fix padding style on approve/decline buttons to add space between.

--- a/CheckYourEligibility-Admin/Views/Application/ApplicationDetailLa.cshtml
+++ b/CheckYourEligibility-Admin/Views/Application/ApplicationDetailLa.cshtml
@@ -20,8 +20,8 @@
 
                         <div class="moj-button-menu">
                             <div class="moj-button-menu__wrapper">
-                                @Html.ActionLink("Approve application", "ApproveConfirmation", "application", new { id = Model.Id }, new { @class = "govuk-button govuk-button--primary" })
-                                @Html.ActionLink("Decline application", "DeclineConfirmation", "application", new { id = Model.Id }, new { @class = "govuk-button govuk-button--secondary" })
+                                @Html.ActionLink("Approve application", "ApproveConfirmation", "application", new { id = Model.Id }, new { @class = "govuk-button govuk-button--primary moj-button-menu__item" })
+                                @Html.ActionLink("Decline application", "DeclineConfirmation", "application", new { id = Model.Id }, new { @class = "govuk-button govuk-button--secondary moj-button-menu__item" })
                       
                             </div>
                         </div>
