--- a/CheckYourEligibility-Parent/Views/Check/Check_Answers.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Check_Answers.cshtml
@@ -90,6 +90,8 @@
 <!-- iterate child list and display data -->
 @for (var i = 0; i < Model.Children.ChildList.Count; i++)
 {
+    var child = Model.Children.ChildList[i];
+    string formattedChildDob = $"{child.Day.PadLeft(2, '0')}/{child.Month.PadLeft(2, '0')}/{child.Year}";
     <div class="govuk-summary-card">
         <div class="govuk-summary-card__title-wrapper">
             <h2 class="govuk-summary-card__title">
@@ -131,7 +133,7 @@
                         Child's date of birth
                     </dt>
                     <dd class="govuk-summary-list__value">
-                        @(new DateOnly((int)Model.Children.ChildList[i].Year, (int)Model.Children.ChildList[i].Month, (int)Model.Children.ChildList[i].Day).ToString("dd/MM/yyyy"))
+                        @formattedChildDob
                     </dd>
                 </div>
             </dl>
